[B]0.5.9[/B]
Added song info to banner, info and big list
Can queue items and change rating from song info
Song info in playlist mode can move items up/down and remove
Added "now playing" quick link to side menu
Infostrip for videos

[B]0.5.8[/B]
Fixed weather widget reloading upon power menu access in panel view
Added loading indicator for widgets in panel view
Updated from transifex
Made music files/playlist view menu consistent
Made adv filter consistent
Added update buttons to side menus
Added viewtypes to movie sets/collections view
Fixed thumbs/info-wall for collections view

[B]0.5.7[/B]
Info-wall view for episodes
Added clear, rename and select item to configuration options
Added moviesets as a preset custom item
Backgrounds dialog menu
Fixed reflections option for weather widget
EPG Timeline view has progress indicator

[B]0.5.6[/B]
Info-list for videos
Show labels view option for thumbnails in music view
Added scroll bar for info list plot
Modified info list for sets icons and sets plot
Fixed missing in-progress tv-show

[B]0.5.5[/B]
Clean-up of music view types
Added new music view types -- info list, info strip, horz wall
Ported lovefilm
Modified existing types info wall for added labels
New thumbs view

[B]0.5.2[/B]
Hide empty submenu tiles except one at end
Center submenu tiles
Added weather fanart as an option for global fanart 

[B]0.5.1[/B]
Removed Aeon Nox backgrounds
Fixed Panel home labels in widgets
Fixed some widgets not showing for panel
Made slideshow for system info custom
Dialogkeyboard.xml can now take a custom_label property
Use custom_label property to distinguish setting path from label
Added preset items weather, update, clean and music videos
Fixed on-screen video info issue


[B]0.5.0[/B]
GUI customisation of categories, widgets, submenus, backgrounds
Widgets can be set for any category
Addition of tv next aired widget (enable 'show all TV Shows for home screen' in Next Aired addon settings